<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/question_1_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_1_first_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_1_second_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_1_third_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_first_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/altair" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_second_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ezio" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_third_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/connor" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/question_2_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_2_first_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/question_2_first_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ac_logo_1" />

                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_2_second_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/question_2_second_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ac_logo_2" />

                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_2_third_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/question_2_third_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/watch_dogs_logo" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_3" />

            <ImageView
                android:id="@+id/question_3_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/question_3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_4" />

            <EditText
                android:id="@+id/question_4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkQuiz"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>